<resources>
    <string name="app_name">Evisual</string>


    <!-- Barre navigation -->
    <string name="navigation_bar_home">Maison</string>
    <string name="navigation_bar_month">Mois</string>
    <string name="navigation_bar_annual">Annuel</string>
    <string name="navigation_bar_account">Compte</string>

    <!-- Page home -->
    <string name="home_section_categorie_depense">depense</string>
    <string name="home_section_prix_depense">prix</string>

    <!-- Page month -->
    <string name="month_page_categorie">depense</string>
    <string name="month_page_prix_total_categorie">prix</string>
    <string name="month_page_categorie_depense">depense</string>
    <string name="month_page_prix_depense">prix</string>

    <!-- Page annual -->
    <string name="annual_page_date">annee</string>

    <!-- Page account -->
    <string name="account_page_title">Informations personnel</string>
    <string name="account_page_email">Adresse mail</string>
    <string name="account_page_password">Mot de passe</string>
    <string name="account_page_reset_password">Réinitialiser le mot de passe</string>
    <string name="account_page_last_name">Nom</string>
    <string name="account_page_last_name_input">Saisissez votre nom</string>
    <string name="account_page_first_name">Prénom</string>
    <string name="account_page_first_name_input">Saisissez votre prénom</string>
    <string name="account_page_dateofbirth">Date de naissance</string>
    <string name="account_page_dateofbirth_input">Saisissez votre date de naissance</string>


    <!-- Page add_categorie -->
    <string name="add_categorie_monthdepense">Le mois de votre dépense</string>
    <string name="add_categorie_pricedepense">Prix de votre dépense</string>
    <string name="add_categorie_detaildepense">Détail de votre dépense</string>
    <string name="add_categorie_submit_button">Soumettre</string>

    <string name="expense_icon">Icône de dépense</string>
    <!-- Liste déroulante categorie -->
    <string-array name="list_title">
        <item>Maison</item>
        <item>Transport</item>
        <item>Loisir</item>
    </string-array>

    <!-- Page reset_passwd -->
    <string name="reset_passwd_page_title">Modifier votre mot de passe</string>
    <string name="reset_passwd_page_actual_passwd">Mot de passe actuel</string>
    <string name="reset_passwd_page_new_passwd">Nouveau mot de passe</string>
    <string name="reset_passwd_page_confirm_new_passwd">Confimez votre mot de passe</string>

    <!-- Page Connection Application-->
    <string name="connect_app_button_acces_application">Accéder à l\'Application</string>
    <string name="connect_app_message_bienvenue">Bienvenue dans l\'Application</string>
    <string name="connect_app_page_mail">exemple@gmail.com</string>
    <string name="connect_app_page_mot_de_passe">mot de passe</string>
    <string name="connect_app_button_connextion">Se connecter</string>
    <string name="connect_app_button_creation_compte">Creer un compte ?</string>
    <string name="connect_app_button_besoin_aide">Besoin d\'aide</string>

    <!-- Page create compte-->
    <string name="create_compte_message_intro">Creation de Compte</string>
    <string name="create_compte_page_mail">exemple@gmail.com</string>
    <string name="create_compte_page_mot_de_passe">mot de passe</string>
    <string name="create_compte_page_confirmation_mot_de_passe">Confirmation mot de passe</string>
    <string name="create_compte_button_connextion">Se connecter</string>
    <string name="create_compte_besoin_aide">Besoin d\'aide ?</string>


    <!-- Page AddCategorieDialogFragment-->
    <string name="Category_Dépense_quotidienne">Dépense quotidienne</string>
    <string name="Category_Maison">Maison</string>
    <string name="Category_Loisir">Loisir</string>
    <string name="Category_Transport">Transport</string>
    <string name="Category_Revenu">Revenu</string>
    <string name="date_selected">Date sélectionnée : %1$s</string>
    <string name="success_add_expense">Dépense ajoutée avec succès</string>
    <string name="invalid_date">Date invalide. Utilisez le format AAAA-MM-JJ</string>
    <string name="fill_all_fields">Veuillez remplir tous les champs</string>
    <string name="other">Autre</string>
    <string name="no_expenses_message">Aucune dépense trouvée pour %1$d.</string>
    <string name="category_daily_expense">depense quotidienne</string>
    <string name="category_transport">transport</string>
    <string name="category_leisure">loisir</string>
    <string name="category_home">maison</string>
    <string name="category_income">revenu</string>
    <string name="category_default">autre</string>
    <string name="login_success_message">Connexion réussie ! Bienvenue, %1$s</string>
    <string name="confirm_delete_title">Confirmation</string>
    <string name="confirm_delete_message">Voulez-vous vraiment supprimer cette dépense ?</string>
    <string name="confirm_delete_positive">Oui</string>
    <string name="confirm_delete_negative">Non</string>
    <string name="error_invalid_date_format">Format de date invalide</string>
    <string name="descrption">Description</string>
    <string name="add_category">Ajouter catégorie</string>
    <string name="no_expense_found">Aucune dépense trouvée. Veuillez en ajouter une.</string>
    <string name="select_date">Sélectionner une date</string>
    <string name="total_revenue">Total Revenu : %1$s</string>
    <string name="remaining_budget">Reste à dépenser : %1$s</string>
    <string name="account_select_birth_date">Anniversaire sélectionné : %1$s</string>
    <string name="error_empty_fields">Vous devez remplir tous les champs !</string>
    <string name="error_invalid_email">Adresse email invalide ! Elle doit se terminer par @gmail.com, @orange.fr ou @esme.fr.</string>
    <string name="error_short_password">Le mot de passe doit contenir au moins 8 caractères.</string>
    <string name="error_password_mismatch">Les mots de passe ne correspondent pas !</string>
    <string name="signup_success">Inscription réussie ! Bienvenue, %1$s</string>
</resources>