<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/default_margin_side"
    android:layout_marginRight="@dimen/default_margin_side">


    <TextView
        android:id="@+id/resetPasswdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/reset_passwd_page_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"/>


    <EditText
        android:id="@+id/actualPasswd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_down_input"
        android:layout_below="@id/resetPasswdTitle"
        android:hint="@string/reset_passwd_page_actual_passwd"
        android:inputType="text"/>

    <EditText
        android:id="@+id/newPasswd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_down_input"
        android:layout_below="@id/actualPasswd"
        android:hint="@string/reset_passwd_page_new_passwd"
        android:inputType="text"/>


    <EditText
        android:id="@+id/confirmNewPasswd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_down_input"
        android:layout_below="@id/newPasswd"
        android:hint="@string/reset_passwd_page_confirm_new_passwd"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_below="@id/confirmNewPasswd"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_down_input"
        android:layout_marginEnd="7dp"
        android:text="@string/add_categorie_submit_button" />



</RelativeLayout>