<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/default_margin_side"
    android:layout_marginRight="@dimen/default_margin_side"
    android:layout_marginTop="@dimen/default_margin_side"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/account_page_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="50dp"
        android:text="@string/account_page_email"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_up_input"
        android:layout_below="@id/email"
        android:hint="@string/account_page_email"
        android:inputType="text"/>


    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_email"
        android:layout_marginTop="@dimen/margin_down_input"
        android:text="@string/account_page_password"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_up_input"
        android:layout_below="@id/password"
        android:hint="@string/account_page_password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/resetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_marginTop="@dimen/margin_up_input"
        android:text="@string/account_page_reset_password"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetpassword"
        android:layout_marginTop="@dimen/margin_down_input"
        android:text="@string/account_page_last_name"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/input_last_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_up_input"
        android:layout_below="@id/last_name"
        android:hint="@string/account_page_last_name_input"
        android:inputType="text"/>


    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_last_name"
        android:layout_marginTop="@dimen/margin_down_input"
        android:text="@string/account_page_first_name"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_below="@id/first_name"
        android:layout_marginTop="@dimen/margin_up_input"
        android:inputType="text"
        android:hint="@string/account_page_first_name_input" />

    <TextView
        android:id="@+id/text_dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_first_name"
        android:layout_marginTop="@dimen/margin_down_input"
        android:text="@string/account_page_dateofbirth"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/margin_up_input"
        android:layout_below="@id/text_dateOfBirth"
        android:hint="@string/account_page_dateofbirth_input"
        android:inputType="text" />

    <Button
        android:id="@+id/validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateOfBirth"
        android:backgroundTint="@color/violet_canva"
        android:layout_marginTop="@dimen/margin_up_input"
        android:text="@string/account_page_validation"
        android:textSize="@dimen/size_title_input"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/Disconnect"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/violet_canva"
        android:layout_alignBottom="@id/validation"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/validation"
        android:text="@string/account_page_disconnect" />


</RelativeLayout>